// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render large icon button with correct styles 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  background-color: transparent;
  color: var(--pbl-theme-colors-common-black);
  border: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
  transition: background-color 0.2s,color 0.2s;
  border-radius: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c0>* {
  width: 36px;
  height: 36px;
  transition: transform 0.2s;
  transform: scale(       1     );
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.3;
  cursor: normal;
}

.c0:hover:enabled {
  background-color: var(--pbl-theme-colors-blackOpacity-50);
  color: var(--pbl-theme-colors-common-black);
}

.c0:focus:enabled {
  background-color: var(--pbl-theme-colors-blackOpacity-100);
  color: var(--pbl-theme-colors-common-black);
}

<button
  aria-pressed="false"
  class="c0"
  color="plain"
>
  <div>
    Icon
  </div>
</button>
`;

exports[`Render medium icon button with correct styles 1`] = `
.c0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
  background-color: transparent;
  color: var(--pbl-theme-colors-common-black);
  border: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
  transition: background-color 0.2s,color 0.2s;
  border-radius: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c0>* {
  width: 28px;
  height: 28px;
  transition: transform 0.2s;
  transform: scale(       1     );
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.3;
  cursor: normal;
}

.c0:hover:enabled {
  background-color: var(--pbl-theme-colors-blackOpacity-50);
  color: var(--pbl-theme-colors-common-black);
}

.c0:focus:enabled {
  background-color: var(--pbl-theme-colors-blackOpacity-100);
  color: var(--pbl-theme-colors-common-black);
}

<button
  aria-pressed="false"
  class="c0"
  color="plain"
>
  <div>
    Icon
  </div>
</button>
`;

exports[`Render small icon button with correct styles 1`] = `
.c0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  background-color: transparent;
  color: var(--pbl-theme-colors-common-black);
  border: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
  transition: background-color 0.2s,color 0.2s;
  border-radius: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.c0>* {
  width: 20px;
  height: 20px;
  transition: transform 0.2s;
  transform: scale(       1     );
}

.c0:enabled {
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.3;
  cursor: normal;
}

.c0:hover:enabled {
  background-color: var(--pbl-theme-colors-blackOpacity-50);
  color: var(--pbl-theme-colors-common-black);
}

.c0:focus:enabled {
  background-color: var(--pbl-theme-colors-blackOpacity-100);
  color: var(--pbl-theme-colors-common-black);
}

<button
  aria-pressed="false"
  class="c0"
  color="plain"
>
  <div>
    Icon
  </div>
</button>
`;
